feat: melhorias visuais, troca de fonte global, ajustes de responsividade

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -66,21 +66,25 @@ body {
     color 0.5s,
     background-color 0.5s;
   line-height: 1.6;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
+  font-family: 'Inter', sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
+* {
+  font-family: 'Montserrat', sans-serif !important;
+}
+
+html, body, #app {
+  font-family: 'Montserrat', sans-serif !important;
+}
+
+/* Corrige a fonte dos ícones FontAwesome */
+.fab, .fa, .fas, .far, .fal, .fad, .fa-solid, .fa-regular, .fa-brands {
+  font-family: 'Font Awesome 6 Free', 'Font Awesome 5 Free', 'FontAwesome', sans-serif !important;
+  font-weight: 900 !important;
 }
